# zenoh-fs

./: .gitignore  Cargo.toml  README.md  zenoh.json5  zfs.sh
example/: download-zfsd  upload-cargo  upload-zfsd
zfs/: Cargo.toml
zfs/src/: frag.rs  lib.rs  sanitizer.rs  transfer.rs
zfsd/: Cargo.toml
zfsd/src/: main.rs
zfsd/src/client/: zet.rs  zut.rs
zfsd/src/daemon/: zfsd.rs
