[package]
name = "zfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh = {git = "https://github.com/eclipse-zenoh/zenoh", tag ="0.5.0-beta.9" }
checksum = "0.2.1"
serde = "1.0.130"
serde_json = "1.0.70"
log = "0.4.14"
futures = "0.3.12"
async-std = "1.9.0"
env_logger = "0.9.0"
indicatif = "0.16.2"