[package]
name = "zfs"
version = "0.1.0"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh = { version = "1.0.0", features = ["internal", "internal_config"] }
checksum = "0.2.1"
serde = "1.0.213"
serde_json = "1.0.132"
log = "0.4.22"
futures = "0.3.31"
tokio = "1.41.0"
env_logger = "0.11.5"
indicatif = "0.17.8"
