[package]
name = "zfsd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zfsd"
path = "src/daemon/zfsd.rs"

[[bin]]
name = "zut"
path = "src/client/zut.rs"
[[bin]]
name = "zet"
path = "src/client/zet.rs"


[dependencies]

zenoh = {git = "https://github.com/eclipse-zenoh/zenoh",  tag ="0.5.0-beta.9" }
zfs = { path = "../zfs" }
clap = "2.33.3"
checksum = "0.2.1"
serde = "1.0.130"
serde_json = "1.0.70"
log = "0.4.14"
async-std = "1.9.0"
crossbeam-channel = "0.5.1"
notify = "4.0.17"
futures = "0.3.12"
env_logger ="0.9.0"
indicatif = "0.16.2"
uuid = "0.8.2"

