[package]
name = "zfsd"
version = "0.1.0"
resolver = "2"
edition = "2021"

[[bin]]
name = "zfsd"
path = "src/daemon/zfsd.rs"

[[bin]]
name = "zut"
path = "src/client/zut.rs"
[[bin]]
name = "zet"
path = "src/client/zet.rs"


[dependencies]
zenoh = { version = "1.0.0", features = ["internal", "internal_config"] }
zenoh-config = "1.0.0"
tokio = "1.41.0"
zfs = { path = "../zfs" }
clap = "2.33.3"
checksum = "0.2.1"
serde = "1.0.213"
serde_json = "1.0.132"
log = "0.4.22"
crossbeam-channel = "0.5.13"
notify = "7.0.0"
futures = "0.3.31"
env_logger ="0.11.5"
indicatif = "0.17.8" # Progress bars
uuid = "1.11.0"
#sled = "0.34.7" # Embedded Database
